Implement parser creating AST